--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="setting">Settings</string>
     <string name="CameraProfileList">Cameras</string>
     <string name="CameraAddProfile">Add New Camera</string>
+    <string name="CameraAddProfile_update">Edit Camera</string>
+    <string name="LensProfileList">Lens</string>
+    <string name="LensAddProfile">Add New Lens</string>
+    <string name="LensAddProfile_update">Edit Lens</string>
+    <string name="ShootingProfile">Shooting Profile</string>
+    <string name="SingleRow">Single Row 360</string>
+    <string name="SingleRowAddProfile">Add - Single Row 360</string>
+    <string name="SingleRowAddProfile_update">Edit - Single Row 360</string>
+    <string name="MultiRow">Multi Row 360</string>
+    <string name="MultiRowAddProfile">Add - Multi Row 360</string>
+    <string name="multiRowUpdate">Edit - Multi Row 360</string>
+    <string name="PartialGigapixelUpdateProfile">Edit - Partial/Gigapixel</string>
+    <string name="PartialGigapixel">Partial/Gigapixel profile</string>
+    <string name="partialGigapixelAddProfile">Add - Partial/Gigapixel</string>
 </resources>
